Appsettings.template updated

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -3,33 +3,34 @@
     "BrowserName": "__BrowserConfiguration.BrowserName__",
     "BrowserVersion": "__BrowserConfiguration.BrowserVersion__",
     "BrowserArguements": {
-      "Sandbox": __BrowserConfiguration.Sandbox__,
-      "Headless": __BrowserConfiguration.Headless__
+      "InSandbox": __BrowserConfiguration.InSandbox__,
+      "InHeadless": __BrowserConfiguration.InHeadless__
     },
     "UseProxy": __BrowserConfiguration.UseProxy__,
-    "Proxy": "__BrowserConfiguration.Proxy__"
+    "ProxyUri": "__BrowserConfiguration.ProxyUri__"
   },
   "BrowserStackConfiguration": {
     "EnableNetworkLogs": "__BrowserStackConfiguration.EnableNetworkLogs__",
-    "BrowserStackUser": "__BrowserStackConfiguration.BrowserStackUser__",
-    "BrowserStackKey": "__BrowserStackConfiguration.BrowserStackKey__",
+    "BrowserStackUsername": "__BrowserStackConfiguration.BrowserStackUsername__",
+    "BrowserStackPassword": "__BrowserStackConfiguration.BrowserStackPassword__",
     "Timezone": "__BrowserStackConfiguration.Timezone__",
-    "AutomateSessions": "__BrowserStackConfiguration.AutomateSessions__",
-    "ServerName": "__BrowserStackConfiguration.ServerName__"
+    "BaseUri": "__BrowserStackConfiguration.BaseUri__",
+    "RemoteAddressUri": "__BrowserStackConfiguration.RemoteAddressUri__"
   },
   "EnvironmentConfiguration": {
     "EnvironmentName": "__EnvironmentConfiguration.EnvironmentName__",
-    "Os": "__EnvironmentConfiguration.Os__",
-    "Osversion": "__EnvironmentConfiguration.Osversion__",
-    "Resolution": "__EnvironmentConfiguration.Resolution__"
+    "OperatingSystem": "__EnvironmentConfiguration.OperatingSystem__",
+    "OperatingSystemVersion": "__EnvironmentConfiguration.OperatingSystemVersion__",
+    "ScreenResolution": "__EnvironmentConfiguration.ScreenResolution__"
   },
   "ProjectConfiguration": {
-    "BaseUrl": "__ProjectConfiguration.BaseUrl__",
-    "ProjectName": "__ProjectConfiguration.ProjectName__"
+    "AppUrl": "__ProjectConfiguration.AppUrl__",
+    "AppName": "__ProjectConfiguration.AppName__",
+    "TakeScreenshots": __ProjectConfiguration.TakeScreenshots__
   },
   "MongoDatabaseConfiguration": {
-    "Uri": "__MongoDatabaseConfiguration.Uri__",
-    "Database": "__MongoDatabaseConfiguration.Database__"
+    "ConnectionString": "__MongoDatabaseConfiguration.ConnectionString__",
+    "DatabaseName": "__MongoDatabaseConfiguration.DatabaseName__"
   },
   "TimeoutConfiguration": {
     "PageNavigation": __TimeoutConfiguration.PageNavigation__,
