App settings changes

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -1,43 +1,41 @@
 ﻿{
-  "BrowserConfiguration": {
-    "BrowserName": "__BrowserConfiguration.BrowserName__",
-    "BrowserVersion": "__BrowserConfiguration.BrowserVersion__",
+  "BrowserSettings": {
+    "BrowserName": "__BrowserSettings.BrowserName__",
+    "BrowserVersion": "__BrowserSettings.BrowserVersion__",
     "BrowserArguements": {
-      "InSandbox": __BrowserConfiguration.InSandbox__,
-      "InHeadless": __BrowserConfiguration.InHeadless__
+      "InSandbox": __BrowserSettings.BrowserArguements.InSandbox__,
+      "InHeadless": __BrowserSettings.BrowserArguements.InHeadless__
     },
-    "UseProxy": __BrowserConfiguration.UseProxy__,
-    "ProxyUri": "__BrowserConfiguration.ProxyUri__"
+    "UseProxy": __BrowserSettings.UseProxy__,
+    "ProxyUri": "__BrowserSettings.ProxyUri__"
   },
-  "BrowserStackConfiguration": {
-    "EnableNetworkLogs": "__BrowserStackConfiguration.EnableNetworkLogs__",
-    "BrowserStackUsername": "__BrowserStackConfiguration.BrowserStackUsername__",
-    "BrowserStackPassword": "__BrowserStackConfiguration.BrowserStackPassword__",
-    "Timezone": "__BrowserStackConfiguration.Timezone__",
-    "BaseUri": "__BrowserStackConfiguration.BaseUri__",
-    "RemoteAddressUri": "__BrowserStackConfiguration.RemoteAddressUri__"
+  "BrowserStackSettings": {
+    "EnableNetworkLogs": __BrowserStackSettings.EnableNetworkLogs__,
+    "BrowserStackUsername": "__BrowserStackSettings.BrowserStackUsername__",
+    "BrowserStackPassword": "__BrowserStackSettings.BrowserStackPassword__",
+    "Timezone": "__BrowserStackSettings.Timezone__",
+    "BaseUri": "__BrowserStackSettings.BaseUri__",
+    "RemoteAddressUri": "__BrowserStackSettings.RemoteAddressUri__"
   },
-  "EnvironmentConfiguration": {
-    "EnvironmentName": "__EnvironmentConfiguration.EnvironmentName__",
-    "OperatingSystem": "__EnvironmentConfiguration.OperatingSystem__",
-    "OperatingSystemVersion": "__EnvironmentConfiguration.OperatingSystemVersion__",
-    "ScreenResolution": "__EnvironmentConfiguration.ScreenResolution__"
+  "EnvironmentSettings": {
+    "EnvironmentName": "__EnvironmentSettings.EnvironmentName__",
+    "OperatingSystem": "__EnvironmentSettings.OperatingSystem__",
+    "OperatingSystemVersion": "__EnvironmentSettings.OperatingSystemVersion__",
+    "ScreenResolution": "__EnvironmentSettings.ScreenResolution__"
   },
-  "ProjectConfiguration": {
-    "AppUrl": "__ProjectConfiguration.AppUrl__",
-    "AppName": "__ProjectConfiguration.AppName__",
-    "TakeScreenshots": __ProjectConfiguration.TakeScreenshots__
+  "ProjectSettings": {
+    "AppUrl": "__ProjectSettings.AppUrl__",
+    "AppName": "__ProjectSettings.AppName__"
   },
-  "MongoDatabaseConfiguration": {
-    "ConnectionString": "__MongoDatabaseConfiguration.ConnectionString__",
-    "DatabaseName": "__MongoDatabaseConfiguration.DatabaseName__"
+  "TestExecutionSettings": {
+    "TakeScreenshots": __TestExecutionSettings.TakeScreenshots__,
+    "TimeoutSettings": {
+      "PageNavigation": "__TimeoutSettings.PageNavigation__",
+      "ImplicitWait": "__TimeoutSettings.ImplicitWait__",
+      "CommandTimeout": "__TimeoutSettings.CommandTimeout__"
+    }
   },
-  "TimeoutConfiguration": {
-    "PageNavigation": __TimeoutConfiguration.PageNavigation__,
-    "ImplicitWait": __TimeoutConfiguration.ImplicitWait__,
-    "CommandTimeout": __TimeoutConfiguration.CommandTimeout__,
-  },
-  "BuildConfiguration": {
-    "BuildNumber": "__BuildConfiguration.BuildNumber__"
+  "BuildSettings": {
+    "BuildNumber": "__BuildSettings.BuildNumber__"
   }
 }
