Enhancements to accomodte nuget version

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -2,7 +2,7 @@
   "BrowserSettings": {
     "BrowserName": "__BrowserSettings.BrowserName__",
     "BrowserVersion": "__BrowserSettings.BrowserVersion__",
-    "BrowserArguements": {
+    "BrowserArguments": {
       "InSandbox": __BrowserSettings.BrowserArguements.InSandbox__,
       "InHeadless": __BrowserSettings.BrowserArguements.InHeadless__
     },
