Updated project to accomodate latest nuget

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -28,11 +28,15 @@
     "AppName": "__ProjectSettings.AppName__"
   },
   "TestExecutionSettings": {
-    "TakeScreenshots": __TestExecutionSettings.TakeScreenshots__,
+    "TakeScreenshots": "__TestExecutionSettings.TakeScreenshots__",
     "TimeoutSettings": {
-      "PageNavigation": "__TimeoutSettings.PageNavigation__",
-      "ImplicitWait": "__TimeoutSettings.ImplicitWait__",
-      "CommandTimeout": "__TimeoutSettings.CommandTimeout__"
+      "PageNavigation": "__TestExecutionSettings.TimeoutSettings.PageNavigation__",
+      "ImplicitWait": "__TestExecutionSettings.TimeoutSettings.ImplicitWait__",
+      "CommandTimeout": "__TestExecutionSettings.TimeoutSettings.CommandTimeout__"
+    },
+    "RetrySettings": {
+      "NumberOfRetries": "__TestExecutionSettings.RetrySettings.NumberOfRetries__",
+      "ExplicitWaitInSeconds": "__TestExecutionSettings.RetrySettings.ExplicitWait__"
     }
   },
   "BuildSettings": {
