Updates to appsettings.json

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -1,7 +1,6 @@
 ﻿{
   "BrowserSettings": {
     "BrowserName": "__BrowserSettings.BrowserName__",
-    "BrowserVersion": "__BrowserSettings.BrowserVersion__",
     "BrowserArguments": {
       "InSandbox": __BrowserSettings.BrowserArguements.InSandbox__,
       "InHeadless": __BrowserSettings.BrowserArguements.InHeadless__
@@ -10,12 +9,11 @@
     "ProxyUri": "__BrowserSettings.ProxyUri__"
   },
   "BrowserStackSettings": {
-    "EnableNetworkLogs": __BrowserStackSettings.EnableNetworkLogs__,
+    "EnableNetworkLogs": "__BrowserStackSettings.EnableNetworkLogs__",
     "BrowserStackUsername": "__BrowserStackSettings.BrowserStackUsername__",
     "BrowserStackPassword": "__BrowserStackSettings.BrowserStackPassword__",
-    "Timezone": "__BrowserStackSettings.Timezone__",
-    "BaseUri": "__BrowserStackSettings.BaseUri__",
-    "RemoteAddressUri": "__BrowserStackSettings.RemoteAddressUri__"
+    "RemoteAddressUri": "__BrowserStackSettings.RemoteAddressUri__",
+    "BrowserVersion": "__BrowserStackSettings.BrowserVersion__"
   },
   "EnvironmentSettings": {
     "EnvironmentName": "__EnvironmentSettings.EnvironmentName__",
