More appsettings amendments

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -6,13 +6,13 @@
       "InHeadless": __BrowserSettings.BrowserArguements.InHeadless__
     },
     "UseProxy": __BrowserSettings.UseProxy__,
-    "ProxyUri": "__BrowserSettings.ProxyUri__"
+    "Proxy": "__BrowserSettings.ProxyUri__"
   },
   "BrowserStackSettings": {
     "EnableNetworkLogs": "__BrowserStackSettings.EnableNetworkLogs__",
-    "BrowserStackUsername": "__BrowserStackSettings.BrowserStackUsername__",
-    "BrowserStackPassword": "__BrowserStackSettings.BrowserStackPassword__",
-    "RemoteAddressUri": "__BrowserStackSettings.RemoteAddressUri__",
+    "Username": "__BrowserStackSettings.BrowserStackUsername__",
+    "AccessKey": "__BrowserStackSettings.BrowserStackPassword__",
+    "WebdriverRemoteServerUrl": "__BrowserStackSettings.RemoteAddressUri__",
     "BrowserVersion": "__BrowserStackSettings.BrowserVersion__"
   },
   "EnvironmentSettings": {
