Updated appsettings.template to match the latest nuget

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -6,13 +6,13 @@
       "InHeadless": __BrowserSettings.BrowserArguements.InHeadless__
     },
     "UseProxy": __BrowserSettings.UseProxy__,
-    "Proxy": "__BrowserSettings.ProxyUri__"
+    "Proxy": "__BrowserSettings.Proxy__"
   },
   "BrowserStackSettings": {
     "EnableNetworkLogs": "__BrowserStackSettings.EnableNetworkLogs__",
-    "Username": "__BrowserStackSettings.BrowserStackUsername__",
-    "AccessKey": "__BrowserStackSettings.BrowserStackPassword__",
-    "WebdriverRemoteServerUrl": "__BrowserStackSettings.RemoteAddressUri__",
+    "Username": "__BrowserStackSettings.Username__",
+    "AccessKey": "__BrowserStackSettings.AccessKey__",
+    "WebdriverRemoteServerUrl": "__BrowserStackSettings.WebdriverRemoteServerUrl__",
     "BrowserVersion": "__BrowserStackSettings.BrowserVersion__"
   },
   "EnvironmentSettings": {
