--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -9,17 +9,19 @@
     "Proxy": "__BrowserSettings.Proxy__"
   },
   "BrowserStackSettings": {
-    "EnableNetworkLogs": "__BrowserStackSettings.EnableNetworkLogs__",
+    "OperatingSystem": "__BrowserStackSettings.OperatingSystem__",
+    "OperatingSystemVersion": "__BrowserStackSettings.OperatingSystemVersion__",
+    "BrowserName": "__BrowserStackSettings.BrowserName__",
+    "BrowserVersion": "__BrowserStackSettings.BrowserVersion__",
+    "ScreenResolution": "__BrowserStackSettings.ScreenResolution__",
+    "Project": "__BrowserStackSettings.Project__",
+    "Build": "__BrowserStackSettings.Build__",
+    "EnableDebug": __BrowserStackSettings.EnableDebug__,
+    "EnableNetworkLogs": __BrowserStackSettings.EnableNetworkLogs__,
+    "RecordVideo": __BrowserStackSettings.RecordVideo__,
+    "EnableSeleniumLogs": __BrowserStackSettings.EnableSeleniumLogs__,
     "Username": "__BrowserStackSettings.Username__",
-    "AccessKey": "__BrowserStackSettings.AccessKey__",
-    "WebdriverRemoteServerUrl": "__BrowserStackSettings.WebdriverRemoteServerUrl__",
-    "BrowserVersion": "__BrowserStackSettings.BrowserVersion__"
-  },
-  "EnvironmentSettings": {
-    "EnvironmentName": "__EnvironmentSettings.EnvironmentName__",
-    "OperatingSystem": "__EnvironmentSettings.OperatingSystem__",
-    "OperatingSystemVersion": "__EnvironmentSettings.OperatingSystemVersion__",
-    "ScreenResolution": "__EnvironmentSettings.ScreenResolution__"
+    "AccessKey": "__BrowserStackSettings.AccessKey__"
   },
   "ProjectSettings": {
     "AppUrl": "__ProjectSettings.AppUrl__",
