Removed the app name from the project settings

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -22,9 +22,8 @@
     "Username": "__BrowserStackSettings.Username__",
     "AccessKey": "__BrowserStackSettings.AccessKey__"
   },
-  "ProjectSettings": {
-    "AppUrl": "__ProjectSettings.AppUrl__",
-    "AppName": "__ProjectSettings.AppName__"
+  "AppSettings": {
+    "AppUrl": "__ProjectSettings.AppUrl__"
   },
   "TestExecutionSettings": {
     "TakeScreenshots": "__TestExecutionSettings.TakeScreenshots__",
