--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -26,11 +26,9 @@
     "AppUrl": "__ProjectSettings.AppUrl__"
   },
   "TestExecutionSettings": {
-    "TakeScreenshots": "__TestExecutionSettings.TakeScreenshots__",
     "TimeoutSettings": {
       "PageNavigation": "__TestExecutionSettings.TimeoutSettings.PageNavigation__",
-      "ImplicitWait": "__TestExecutionSettings.TimeoutSettings.ImplicitWait__",
-      "CommandTimeout": "__TestExecutionSettings.TimeoutSettings.CommandTimeout__"
+      "ImplicitWait": "__TestExecutionSettings.TimeoutSettings.ImplicitWait__"
     },
     "RetrySettings": {
       "NumberOfRetries": "__TestExecutionSettings.RetrySettings.NumberOfRetries__",
