Removed obsolete settings

--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -74,7 +74,10 @@
       "PropertyContainsFilters": [
         {
           "Key": "subject",
-          "Values": [ "e11a1137-01ca-446a-b60f-0de5ad5321cc", "e11a1195-801d-479b-84b6-f5e443abfb86" ]
+          "Values": [
+            "e11a1137-01ca-446a-b60f-0de5ad5321cc",
+            "e11a1195-801d-479b-84b6-f5e443abfb86"
+          ]
         }
       ]
     }
