--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -70,3 +70,15 @@ stages:
           DotNetCoreVersion: 3.1.101
           PublishWebApp: true
           TestSuffix: UnitTests
+    
+    #Build UI functional Tests
+    - job: Builduifunctionaltests
+      displayName: Build UI functional tests
+      steps:
+    # Build all UI Functional Tests that ends with .FunctionalTests
+      - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-dotnetcore-build-sonar.yml@dfc-devops
+        parameters:
+          SolutionBaseName: $(SolutionBaseName).UI.FunctionalTests
+          BuildPlatform: $(BuildPlatform)
+          BuildConfiguration: $(BuildConfiguration)
+          DotNetCoreVersion: 3.1.101
