added ui into description

--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -75,7 +75,7 @@ stages:
     - job: Builduifunctionaltests
       displayName: Build UI functional tests
       steps:
-    # Build all UI Functional Tests that ends with .FunctionalTests
+    # Build all UI Functional Tests that ends with UI.FunctionalTests
       - template: AzureDevOpsTemplates\Build\StepTemplates\dfc-dotnetcore-build-sonar.yml@dfc-devops
         parameters:
           SolutionBaseName: $(SolutionBaseName).UI.FunctionalTests
