--- a/DFC.App.ContactUs.UI.FunctionalTests/DFC.App.ContactUs.UI.FunctionalTests.csproj
+++ b/DFC.App.ContactUs.UI.FunctionalTests/DFC.App.ContactUs.UI.FunctionalTests.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <ProjectGuid>6926461B-0774-4F94-AB0F-9100DD738DA3</ProjectGuid>
+    <ProjectGuid>{6926461B-0774-4F94-AB0F-9100DD738DA3}</ProjectGuid>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
