--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -1,41 +1,41 @@
 ﻿{
   "BrowserSettings": {
-    "BrowserName": "__BrowserSettings.BrowserName__",
+    "BrowserName": "__BrowserSettingsBrowserName__",
     "BrowserArguments": {
-      "InSandbox": __BrowserSettings.BrowserArguements.InSandbox__,
-      "InHeadless": __BrowserSettings.BrowserArguements.InHeadless__
+      "InSandbox": __BrowserSettingsBrowserArguementsInSandbox__,
+      "InHeadless": __BrowserSettingsBrowserArguementsInHeadless__
     },
-    "UseProxy": __BrowserSettings.UseProxy__,
-    "Proxy": "__BrowserSettings.Proxy__"
+    "UseProxy": __BrowserSettingsUseProxy__,
+    "Proxy": "__BrowserSettingsProxy__"
   },
   "BrowserStackSettings": {
-    "OperatingSystem": "__BrowserStackSettings.OperatingSystem__",
-    "OperatingSystemVersion": "__BrowserStackSettings.OperatingSystemVersion__",
-    "BrowserName": "__BrowserStackSettings.BrowserName__",
-    "BrowserVersion": "__BrowserStackSettings.BrowserVersion__",
-    "ScreenResolution": "__BrowserStackSettings.ScreenResolution__",
-    "Project": "__BrowserStackSettings.Project__",
-    "EnableDebug": __BrowserStackSettings.EnableDebug__,
-    "EnableNetworkLogs": __BrowserStackSettings.EnableNetworkLogs__,
-    "RecordVideo": __BrowserStackSettings.RecordVideo__,
-    "EnableSeleniumLogs": __BrowserStackSettings.EnableSeleniumLogs__,
-    "Username": "__BrowserStackSettings.Username__",
-    "AccessKey": "__BrowserStackSettings.AccessKey__"
+    "OperatingSystem": "__BrowserStackSettingsOperatingSystem__",
+    "OperatingSystemVersion": "__BrowserStackSettingsOperatingSystemVersion__",
+    "BrowserName": "__BrowserStackSettingsBrowserName__",
+    "BrowserVersion": "__BrowserStackSettingsBrowserVersion__",
+    "ScreenResolution": "__BrowserStackSettingsScreenResolution__",
+    "Project": "__BrowserStackSettingsProject__",
+    "EnableDebug": __BrowserStackSettingsEnableDebug__,
+    "EnableNetworkLogs": __BrowserStackSettingsEnableNetworkLogs__,
+    "RecordVideo": __BrowserStackSettingsRecordVideo__,
+    "EnableSeleniumLogs": __BrowserStackSettingsEnableSeleniumLogs__,
+    "Username": "__BrowserStackSettingsUsername__",
+    "AccessKey": "__BrowserStackSettingsAccessKey__"
   },
   "AppSettings": {
-    "AppUrl": "__ProjectSettings.AppUrl__"
+    "AppUrl": "__ProjectSettingsAppUrl__"
   },
   "TestExecutionSettings": {
     "TimeoutSettings": {
-      "PageNavigation": "__TestExecutionSettings.TimeoutSettings.PageNavigation__",
-      "ImplicitWait": "__TestExecutionSettings.TimeoutSettings.ImplicitWait__"
+      "PageNavigation": "__TestExecutionSettingsTimeoutSettingsPageNavigation__",
+      "ImplicitWait": "__TestExecutionSettingsTimeoutSettingsImplicitWait__"
     },
     "RetrySettings": {
-      "NumberOfRetries": "__TestExecutionSettings.RetrySettings.NumberOfRetries__",
-      "ExplicitWaitInSeconds": "__TestExecutionSettings.RetrySettings.ExplicitWait__"
+      "NumberOfRetries": "__TestExecutionSettingsRetrySettingsNumberOfRetries__",
+      "ExplicitWaitInSeconds": "__TestExecutionSettingsRetrySettingsExplicitWait__"
     }
   },
   "BuildSettings": {
-    "BuildNumber": "__BuildSettings.BuildNumber__"
+    "BuildNumber": "__BuildSettingsBuildNumber__"
   }
 }
