--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -15,6 +15,8 @@
     "BrowserVersion": "__BrowserStackSettingsBrowserVersion__",
     "ScreenResolution": "__BrowserStackSettingsScreenResolution__",
     "Project": "__BrowserStackSettingsProject__",
+    "Build": "__BrowserStackSettingsBuild__",
+    "Name": "__BrowserStackSettingsName__",
     "EnableDebug": __BrowserStackSettingsEnableDebug__,
     "EnableNetworkLogs": __BrowserStackSettingsEnableNetworkLogs__,
     "RecordVideo": __BrowserStackSettingsRecordVideo__,
@@ -34,8 +36,5 @@
       "NumberOfRetries": "__TestExecutionSettingsRetrySettingsNumberOfRetries__",
       "ExplicitWaitInSeconds": "__TestExecutionSettingsRetrySettingsExplicitWait__"
     }
-  },
-  "BuildSettings": {
-    "BuildNumber": "__BuildSettingsBuildNumber__"
   }
 }
