Added logic to append app url

--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -15,7 +15,7 @@
     "BrowserVersion": "__BrowserStackSettingsBrowserVersion__",
     "ScreenResolution": "__BrowserStackSettingsScreenResolution__",
     "Project": "__BrowserStackSettingsProject__",
-    "Build": "__BrowserStackSettingsBuild__",
+    "Build": "Contact us",
     "Name": "__BrowserStackSettingsName__",
     "EnableDebug": __BrowserStackSettingsEnableDebug__,
     "EnableNetworkLogs": __BrowserStackSettingsEnableNetworkLogs__,
@@ -25,7 +25,7 @@
     "AccessKey": "__BrowserStackSettingsAccessKey__"
   },
   "AppSettings": {
-    "AppUrl": "__ProjectSettingsAppUrl__"
+    "AppBaseUrl": "__AppBaseUrl__"
   },
   "TestExecutionSettings": {
     "TimeoutSettings": {
