--- a/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
+++ b/DFC.App.ContactUs.UI.FunctionalTests/appsettings.template.json
@@ -1,45 +1,38 @@
 ﻿{
   "BrowserSettings": {
-    "BrowserName": "__BrowserSettings.BrowserName__",
-    "BrowserVersion": "__BrowserSettings.BrowserVersion__",
+    "BrowserName": "__BrowserSettingsBrowserName__",
     "BrowserArguments": {
-      "InSandbox": __BrowserSettings.BrowserArguements.InSandbox__,
-      "InHeadless": __BrowserSettings.BrowserArguements.InHeadless__
+      "InSandbox": __BrowserSettingsBrowserArguementsInSandbox__,
+      "InHeadless": __BrowserSettingsBrowserArguementsInHeadless__
     },
-    "UseProxy": __BrowserSettings.UseProxy__,
-    "ProxyUri": "__BrowserSettings.ProxyUri__"
+    "UseProxy": __BrowserSettingsUseProxy__,
+    "Proxy": "__BrowserSettingsProxy__"
   },
   "BrowserStackSettings": {
-    "EnableNetworkLogs": __BrowserStackSettings.EnableNetworkLogs__,
-    "BrowserStackUsername": "__BrowserStackSettings.BrowserStackUsername__",
-    "BrowserStackPassword": "__BrowserStackSettings.BrowserStackPassword__",
-    "Timezone": "__BrowserStackSettings.Timezone__",
-    "BaseUri": "__BrowserStackSettings.BaseUri__",
-    "RemoteAddressUri": "__BrowserStackSettings.RemoteAddressUri__"
+    "OperatingSystem": "__BrowserStackSettingsOperatingSystem__",
+    "OperatingSystemVersion": "__BrowserStackSettingsOperatingSystemVersion__",
+    "BrowserName": "__BrowserStackSettingsBrowserName__",
+    "BrowserVersion": "__BrowserStackSettingsBrowserVersion__",
+    "ScreenResolution": "__BrowserStackSettingsScreenResolution__",
+    "Project": "__BrowserStackSettingsProject__",
+    "EnableDebug": __BrowserStackSettingsEnableDebug__,
+    "EnableNetworkLogs": __BrowserStackSettingsEnableNetworkLogs__,
+    "RecordVideo": __BrowserStackSettingsRecordVideo__,
+    "EnableSeleniumLogs": __BrowserStackSettingsEnableSeleniumLogs__,
+    "Username": "__BrowserStackSettingsUsername__",
+    "AccessKey": "__BrowserStackSettingsAccessKey__"
   },
-  "EnvironmentSettings": {
-    "EnvironmentName": "__EnvironmentSettings.EnvironmentName__",
-    "OperatingSystem": "__EnvironmentSettings.OperatingSystem__",
-    "OperatingSystemVersion": "__EnvironmentSettings.OperatingSystemVersion__",
-    "ScreenResolution": "__EnvironmentSettings.ScreenResolution__"
-  },
-  "ProjectSettings": {
-    "AppUrl": "__ProjectSettings.AppUrl__",
-    "AppName": "__ProjectSettings.AppName__"
+  "AppSettings": {
+    "AppBaseUrl": "__AppBaseUrl__"
   },
   "TestExecutionSettings": {
-    "TakeScreenshots": "__TestExecutionSettings.TakeScreenshots__",
     "TimeoutSettings": {
-      "PageNavigation": "__TestExecutionSettings.TimeoutSettings.PageNavigation__",
-      "ImplicitWait": "__TestExecutionSettings.TimeoutSettings.ImplicitWait__",
-      "CommandTimeout": "__TestExecutionSettings.TimeoutSettings.CommandTimeout__"
+      "PageNavigation": "__TestExecutionSettingsTimeoutSettingsPageNavigation__",
+      "ImplicitWait": "__TestExecutionSettingsTimeoutSettingsImplicitWait__"
     },
     "RetrySettings": {
-      "NumberOfRetries": "__TestExecutionSettings.RetrySettings.NumberOfRetries__",
-      "ExplicitWaitInSeconds": "__TestExecutionSettings.RetrySettings.ExplicitWait__"
+      "NumberOfRetries": "__TestExecutionSettingsRetrySettingsNumberOfRetries__",
+      "ExplicitWaitInSeconds": "__TestExecutionSettingsRetrySettingsExplicitWait__"
     }
-  },
-  "BuildSettings": {
-    "BuildNumber": "__BuildSettings.BuildNumber__"
   }
 }
