--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -63,7 +63,6 @@
     "SummaryEndpoint": "summary-endpoint"
   },
   "ChatOptions": {
-    "HideProductionWarning": [ "bool", "-", true, "if", "production", "environment", "of", "webchat", "Url", false, "if", "not" ],
     "ChatUrl": "[URL to external webchat provider]"
   },
   "SubscriptionSettings": {
@@ -74,7 +73,11 @@
       "PropertyContainsFilters": [
         {
           "Key": "subject",
-          "Values": [ "e11a1137-01ca-446a-b60f-0de5ad5321cc", "e11a1195-801d-479b-84b6-f5e443abfb86" ]
+          "Values": [
+            "e11a1137-01ca-446a-b60f-0de5ad5321cc",
+            "e11a1195-801d-479b-84b6-f5e443abfb86",
+            "87a3aa46-472c-47a1-96c1-1a009b5953eb"
+          ]
         }
       ]
     }
