Added feature switch to show/hide webchat iframe

--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -63,7 +63,8 @@
     "SummaryEndpoint": "summary-endpoint"
   },
   "ChatOptions": {
-    "ChatUrl": "[URL to external webchat provider]"
+    "ChatUrl": "[URL to external webchat provider]",
+    "ShowWebchatIframe": true     // if iFrame is available, false if not
   },
   "SubscriptionSettings": {
     "Endpoint": "https://localhost:8081/api/webhook/ReceiveEvents",
