--- a/DFC.App.ContactUs.Services.EmailService.UnitTests/DFC.App.ContactUs.Services.EmailService.UnitTests.csproj
+++ b/DFC.App.ContactUs.Services.EmailService.UnitTests/DFC.App.ContactUs.Services.EmailService.UnitTests.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <PackageReference Include="FakeItEasy" Version="6.2.1" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
