--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -30,13 +30,21 @@
         "CollectionId": "ContactUs-session-state",
         "PartitionKey": "/PartitionKey"
       }
-    },
-    "SendGrid": {
-      "ApiKey": "[send grid api key]",
-      "DefaultNumberOfRetries": 2,
-      "DefaultMinimumBackOff": 2,
-      "DeltaBackOff": 3,
-      "DefaultMaximumBackOff": 3
+    }
+  },
+  "NotifyOptions": {
+    "ApiKey": "[Notify API Key]",
+    "ByEmailTemplateId": "[email templated Id]",
+    "CallMeBackTemplateId": "[call back template Id]",
+    "Policies": {
+      "HttpCircuitBreaker": {
+        "DurationOfBreak": "00:00:30",
+        "ExceptionsAllowedBeforeBreaking": 3
+      },
+      "HttpRetry": {
+        "BackoffPower": 2,
+        "Count": 3
+      }
     }
   },
   "Policies": {
