--- a/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests.csproj
+++ b/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests/DFC.App.ContactUs.Services.AreaRoutingService.UnitTests.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.96" />
     <PackageReference Include="FakeItEasy" Version="6.2.1" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
