NCSD-5552-add-notify

--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -49,6 +49,12 @@ stages:
             targetPath: "$(Build.SourcesDirectory)/DFC.App.ContactUs/OpenAPIDocs"
             artifactName: ${{ variables.SolutionBaseName }}.OpenAPIDocs
 
+        - task: PublishPipelineArtifact@1
+          displayName: Publish Apim Policy
+          inputs:
+            targetPath: "$(System.DefaultWorkingDirectory)/Notify"
+            artifactName: ${{ variables.SolutionBaseName }}.Notify
+
     - job: PublishApimPolicy
       displayName: Publish Apim Policy
       steps:
