--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
             artifactName: ${{ variables.SolutionBaseName }}.OpenAPIDocs
 
         - task: PublishPipelineArtifact@1
-          displayName: Publish Apim Policy
+          displayName: Publish Notify Nugets
           inputs:
             targetPath: "$(System.DefaultWorkingDirectory)/Notify"
             artifactName: ${{ variables.SolutionBaseName }}.Notify
