NCSD-5552-new-nuget

--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -49,11 +49,19 @@ stages:
             targetPath: "$(Build.SourcesDirectory)/DFC.App.ContactUs/OpenAPIDocs"
             artifactName: ${{ variables.SolutionBaseName }}.OpenAPIDocs
 
-        - task: PublishPipelineArtifact@1
-          displayName: Publish Notify Nugets
+        - task: PowerShell@2
+          displayName: "Pack and version nuget file"
+          inputs:      
+            targetType: inline
+            script: |
+              dotnet pack DFC.Api.Notify/DFC.Api.Notify.csproj --no-build -c Release -o $(build.artifactstagingdirectory)\\packages /p:Version=$(GitVersion.MajorMinorPatch)
+
+        # And publish it so we can release it in a separate release definition
+        - task: PublishBuildArtifacts@1
+          displayName:  "Publish build artifacts"
           inputs:
-            targetPath: "$(System.DefaultWorkingDirectory)/Notify"
-            artifactName: ${{ variables.SolutionBaseName }}.Notify
+            ArtifactName: "Packages"
+            PathtoPublish: "$(build.artifactstagingdirectory)\\packages"
 
     - job: PublishApimPolicy
       displayName: Publish Apim Policy
