--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -54,7 +54,7 @@ stages:
           inputs:      
             targetType: inline
             script: |
-              dotnet pack DFC.Api.Notify/DFC.Api.Notify.csproj --no-build -c Release -o $(build.artifactstagingdirectory)\\packages /p:Version=2.8.0
+              dotnet pack Notify/DFC.Api.Notify/DFC.Api.Notify.csproj --no-build -c Release -o $(build.artifactstagingdirectory)\\packages /p:Version=2.8.0
 
         # And publish it so we can release it in a separate release definition
         - task: PublishBuildArtifacts@1
