--- a/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
+++ b/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
@@ -1,17 +1,18 @@
-﻿<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>TestDemo</id>
-    <version>1.0.0</version>
-    <authors>Tester</authors>
-    <owners>Tester</owners>
+    <id>NewNotify</id>
+    <version>2.8.0</version>
+    <title></title>
+    <authors>National Careers Service</authors>
+    <owners></owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>TestDemo</description>
-    <releaseNotes>Summary of changes made in this release of the package.</releaseNotes>
-    <copyright>Copyright 2017</copyright>
-    <tags>Tag1 Tag2</tags>
+    <description>Notify Ver 2.8.0</description>
   </metadata>
   <files>
-    <file src="lib\net462\*.*" target="lib\net462" />
+    <file src="src\net462\Notify.dll" target="src\net462\Notify.dll" />
+    <file src="src\netcoreapp2.0\Notify.dll" target="src\netcoreapp2.0\Notify.dll" />
+    <file src="src\netstandard2.0\Notify.dll" target="src\netstandard2.0\Notify.dll" />
+    <file src="src\netstandard2.0\Notify.xml" target="src\netstandard2.0\Notify.xml" />
   </files>
 </package>
