--- a/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
+++ b/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>NewNotify</id>
+    <id>Notify280</id>
     <version>2.8.0</version>
     <title></title>
     <authors>National Careers Service</authors>
