--- a/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
+++ b/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
@@ -10,7 +10,7 @@
     <description>Notify Ver 2.8.0</description>
   </metadata>
   <files>
-    <file lib="lib\net462\Notify.dll" target="lib\net462\Notify.dll" />
+    <file src="lib\net462\Notify.dll" target="lib\net462\Notify.dll" />
     <file src="lib\netcoreapp2.0\Notify.dll" target="lib\netcoreapp2.0\Notify.dll" />
     <file src="lib\netstandard2.0\Notify.dll" target="lib\netstandard2.0\Notify.dll" />
     <file src="lib\netstandard2.0\Notify.xml" target="lib\netstandard2.0\Notify.xml" />
