--- a/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
+++ b/Notify/DFC.Api.Notify/DFC.Api.Notify.csproj.nuspec
@@ -1,13 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
+<package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Notify280</id>
-    <version>2.8.0</version>
-    <title></title>
+    <version>1.1.0</version>
     <authors>National Careers Service</authors>
-    <owners></owners>
+    <owners>National Careers Service</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Notify Ver 2.8.0</description>
+    <description>GOV.UK .NET Notify Client</description>
+    <releaseNotes>Netstandard release for net core 2.0, framework 4.6.2</releaseNotes>
+    <dependencies>
+      <group targetFramework=".NETFramework4.6.2">
+        <dependency id="JWT" version="5.0.1" exclude="Build,Analyzers" />
+        <dependency id="Newtonsoft.Json" version="10.0.3" exclude="Build,Analyzers" />
+        <dependency id="System.Collections.Specialized" version="4.3.0" exclude="Build,Analyzers" />
+        <dependency id="System.Net.Http" version="4.3.3" exclude="Build,Analyzers" />
+        <dependency id="System.Reflection" version="4.3.0" exclude="Build,Analyzers" />
+        <dependency id="System.Runtime.Extensions" version="4.3.0" exclude="Build,Analyzers" />
+      </group>
+      <group targetFramework=".NETCoreApp2.0">
+        <dependency id="JWT" version="5.0.1" exclude="Build,Analyzers" />
+        <dependency id="Newtonsoft.Json" version="10.0.3" exclude="Build,Analyzers" />
+        <dependency id="System.Collections.Specialized" version="4.3.0" exclude="Build,Analyzers" />
+        <dependency id="System.Reflection" version="4.3.0" exclude="Build,Analyzers" />
+        <dependency id="System.Runtime.Extensions" version="4.3.0" exclude="Build,Analyzers" />
+      </group>
+      <group targetFramework=".NETStandard2.0">
+        <dependency id="JWT" version="5.0.1" exclude="Build,Analyzers" />
+        <dependency id="Newtonsoft.Json" version="10.0.3" exclude="Build,Analyzers" />
+        <dependency id="System.Collections.Specialized" version="4.3.0" exclude="Build,Analyzers" />
+        <dependency id="System.Reflection" version="4.3.0" exclude="Build,Analyzers" />
+        <dependency id="System.Runtime.Extensions" version="4.3.0" exclude="Build,Analyzers" />
+      </group>
+    </dependencies>
   </metadata>
   <files>
     <file src="lib\net462\Notify.dll" target="lib\net462\Notify.dll" />
