--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -62,7 +62,7 @@ stages:
     - job: BuildDotNetCore
       displayName: Build-DotNetCore
       steps:
-      - template: AzureDevOpsTemplates/Build/StepTemplates/dfc-dotnetcore-build-sonar.yml@dfc-devops
+      - template: AzureDevOpsTemplates/Build/StepTemplates/dfc-dotnetcore-build-unit-integration-sonar.yml@dfc-devops
         parameters:
           SolutionBaseName: $(SolutionBaseName)
           BuildPlatform: $(BuildPlatform)
@@ -70,6 +70,7 @@ stages:
           DotNetCoreVersion: 3.1.101
           PublishWebApp: true
           TestSuffix: UnitTests
+          IntegrationTestSuffix: IntegrationTests
     
     #Build UI functional Tests
     - job: Builduifunctionaltests
