--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -19,6 +19,18 @@ pool:
     - msbuild
     - visualstudio
 
+trigger: 
+  branches:
+    include: 
+    - dev
+    - master
+
+pr:
+  branches:
+    include: 
+    - dev
+    - master
+
 stages:
   - stage: Build
     displayName: Build, Test and Analyze
