--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -19,6 +19,18 @@ pool:
     - msbuild
     - visualstudio
 
+trigger: 
+  branches:
+    include: 
+    - dev
+    - master
+
+pr:
+  branches:
+    include: 
+    - dev
+    - master
+
 stages:
   - stage: Build
     displayName: Build, Test and Analyze
@@ -62,7 +74,7 @@ stages:
     - job: BuildDotNetCore
       displayName: Build-DotNetCore
       steps:
-      - template: AzureDevOpsTemplates/Build/StepTemplates/dfc-dotnetcore-build-sonar.yml@dfc-devops
+      - template: AzureDevOpsTemplates/Build/StepTemplates/dfc-dotnetcore-build-unit-integration-sonar.yml@dfc-devops
         parameters:
           SolutionBaseName: $(SolutionBaseName)
           BuildPlatform: $(BuildPlatform)
@@ -70,6 +82,7 @@ stages:
           DotNetCoreVersion: 3.1.101
           PublishWebApp: true
           TestSuffix: UnitTests
+          IntegrationTestSuffix: IntegrationTests
     
     #Build UI functional Tests
     - job: Builduifunctionaltests
