--- a/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
+++ b/DFC.App.ContactUs.Data/DFC.App.ContactUs.Data.csproj
@@ -12,6 +12,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Compui.Cosmos" Version="1.0.67" />
+    <PackageReference Include="DFC.Content.Pkg.Netcore" Version="1.0.109" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
