--- a/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
+++ b/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
@@ -12,6 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.96" />
+    <PackageReference Include="DFC.Content.Pkg.Netcore" Version="1.0.109" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
