--- a/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
+++ b/DFC.App.ContactUs.Services.AreaRoutingService/DFC.App.ContactUs.Services.AreaRoutingService.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <CodeAnalysisRuleSet>../DFC.Digital.CodeAnalysis.ruleset</CodeAnalysisRuleSet>
     <ProjectGuid>{27878CD8-AD61-4A76-B6B2-F4E050051891}</ProjectGuid>
     <Nullable>enable</Nullable>
@@ -13,7 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="DFC.Compui.Subscriptions" Version="1.0.96" />
-    <PackageReference Include="DFC.Content.Pkg.Netcore" Version="1.0.109" />
+    <PackageReference Include="DFC.Content.Pkg.Netcore" Version="2.0.0" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
