--- a/Resources/AzureDevops/azure-pipelines.yml
+++ b/Resources/AzureDevops/azure-pipelines.yml
@@ -48,6 +48,12 @@ stages:
           inputs:
             targetPath: '$(Build.SourcesDirectory)/Resources/PageRegistration'
             artifactName: ${{ variables.SolutionBaseName }}.PageRegistrations
+
+        - task: PublishPipelineArtifact@1
+          displayName: Publish Apim Policy
+          inputs:
+            targetPath: "$(System.DefaultWorkingDirectory)/Resources/ApimPolicy"
+            artifactName: ${{ variables.SolutionBaseName }}.ApimPolicies
     
     #Build and test application
     - job: BuildDotNetCore
