Fixing integration tests

--- a/DFC.App.ContactUs.IntegrationTests/appsettings.json
+++ b/DFC.App.ContactUs.IntegrationTests/appsettings.json
@@ -75,7 +75,8 @@
     "CmsApiClientOptions": {
       "Timeout": "00:00:30",
       "ApiKey": "ApiKey",
-      "BaseAddress": "https://localhost:8081",
+      //"BaseAddress": "https://localhost:8081",
+      "BaseAddress": "https://localhost/",
       "StaticContentEndpoint": "/sharedcontent/",
       "ContentIds": "999"
     },
