Added Thread settings

--- a/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
+++ b/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
@@ -53,5 +53,9 @@
   },
   "ChatOptions": {
     "ChatUrl": "[URL to external webchat provider]"
+  },
+  "ThreadSettings": {
+    "WorkerThreads": "200",
+    "IocpThreads" :  "200"
   }
 }
