Added content mode to GraphQL and Redis called

--- a/DFC.App.ContactUs/appsettings - Copy.json
+++ b/DFC.App.ContactUs/appsettings - Copy.json
@@ -68,6 +68,9 @@
   "ChatOptions": {
     "ChatUrl": "[URL to external webchat provider]",
     "ShowWebchatIframe": true // if iFrame is available, false if not
+  },
+  "contentMode": {
+    "contentMode": "PUBLISHED"
   }
 }
 
