--- a/DFC.App.ContactUs.IntegrationTests/DFC.App.ContactUs.IntegrationTests.csproj
+++ b/DFC.App.ContactUs.IntegrationTests/DFC.App.ContactUs.IntegrationTests.csproj
@@ -16,6 +16,7 @@
 
 
   <ItemGroup>
+    <PackageReference Include="DFC.Common.SharedContent.Pkg.Netcore" Version="0.1.57" />
     <PackageReference Include="FakeItEasy" Version="7.3.1" />
     <PackageReference Include="FluentAssertions" Version="6.9.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
