--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -65,7 +65,7 @@
   },
   "Cms": {
     "TokenEndPointUrl": "https://dfc-dev-stax-editor-as.azurewebsites.net/connect/token",
-    "StaxGraphApiUrl": "https://dfc-dev-stax-editor-as.azurewebsites.net/api/GraphQL",
+    "GraphApiUrl": "https://dfc-dev-stax-editor-as.azurewebsites.net/api/GraphQL",
     "ClientId": "__CmsClientId__",
     "ClientSecret": "__CmsClientSecret__",
     "RedisCacheConnectionString": "__CmsRedisCacheConnectionString__",
