--- a/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
+++ b/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
@@ -54,8 +54,19 @@
   "ChatOptions": {
     "ChatUrl": "[URL to external webchat provider]"
   },
+  "Cms": {
+    "TokenEndPointUrl": "https://localhost/",
+    "GraphApiUrl": "https://localhost/",
+    "ClientId": "id",
+    "ClientSecret": "secret",
+    "RedisCacheConnectionString": "connectionstring",
+    "SqlApiUrl": "https://localhost/"
+  },
+  "contentMode": {
+    "contentMode": "PUBLISHED"
+  },
   "ThreadSettings": {
     "WorkerThreads": "200",
-    "IocpThreads" :  "200"
+    "IocpThreads": "200"
   }
 }
