--- a/DFC.App.ContactUs.IntegrationTests/appsettings.json
+++ b/DFC.App.ContactUs.IntegrationTests/appsettings.json
@@ -82,6 +82,17 @@
     "ChatOptions": {
       "ChatUrl": "[URL to external webchat provider]",
       "ShowWebchatIframe": true //if iFrame is available false if not
+    },
+    "Cms": {
+      "TokenEndPointUrl": "https://localhost/",
+      "GraphApiUrl": "https://localhost/",
+      "ClientId": "id",
+      "ClientSecret": "secret",
+      "RedisCacheConnectionString": "connectionstring",
+      "SqlApiUrl": "https://localhost/"
+    },
+    "contentMode": {
+      "contentMode": "PUBLISHED"
     }
   }
 }
