Fixed integration tests

--- a/DFC.App.ContactUs.IntegrationTests/DFC.App.ContactUs.IntegrationTests.csproj
+++ b/DFC.App.ContactUs.IntegrationTests/DFC.App.ContactUs.IntegrationTests.csproj
@@ -40,8 +40,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.json">
+    <Content Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+    </Content>
+</ItemGroup>
 </Project>
