Added HealthController and tests

--- a/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
+++ b/DFC.App.ContactUs.IntegrationTests/appsettings-template.json
@@ -56,6 +56,17 @@
   },
   "ThreadSettings": {
     "WorkerThreads": "200",
-    "IocpThreads" :  "200"
+    "IocpThreads": "200"
+  },
+  "Cms": {
+    "TokenEndPointUrl": "https://localhost/",
+    "GraphApiUrl": "https://localhost/",
+    "ClientId": "id",
+    "ClientSecret": "secret",
+    "RedisCacheConnectionString": "connectionstring",
+    "SqlApiUrl": "https://localhost/"
+  },
+  "contentMode": {
+    "contentMode": "PUBLISHED"
   }
 }
