Add Redis Expiry value

--- a/DFC.App.ContactUs/appsettings-template.json
+++ b/DFC.App.ContactUs/appsettings-template.json
@@ -69,7 +69,8 @@
     "ClientId": "__CmsClientId__",
     "ClientSecret": "__CmsClientSecret__",
     "RedisCacheConnectionString": "__CmsRedisCacheConnectionString__",
-    "SqlApiUrl": "https://dfc-dev-stax-editor-as.azurewebsites.net/api/queries"
+    "SqlApiUrl": "https://dfc-dev-stax-editor-as.azurewebsites.net/api/queries",
+    "Expiry": "4"
   },
   "contentMode": {
     "contentMode": "PUBLISHED"
